{
    "name": "RunnerInputAction",
    "maps": [
        {
            "name": "GamePlay",
            "id": "483fa4f4-3742-488e-a613-3618bf1e75a3",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "49eff3a1-0180-4c30-9945-68d80e5e92f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "712c8870-cd97-4fe8-84c1-0b50a16b250d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartDrag",
                    "type": "PassThrough",
                    "id": "3825d393-6c3e-4afd-8f8e-5ac9e5be884f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "EndDrag",
                    "type": "PassThrough",
                    "id": "dfed6512-5bc0-49d4-80d7-dc089f14b606",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bb26b6e5-d010-4eed-828f-faa3fc3906e8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15b0fa30-cb24-41ef-9be7-77c45ae013fc",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a575de6-f8ad-4f12-a256-1f41126c21de",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0205be9c-358a-4c8f-9fc1-a6e3ed7bbc39",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f63df956-d18c-44cf-bfc2-7e2f1793c4e9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "StartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b62db3d7-a9c9-4c36-970d-6de8723df77d",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "StartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9796851e-0089-4247-991b-4aad5ab26e1e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "EndDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3ec62d7-6ff8-45f8-a884-acd504650351",
                    "path": "<Touchscreen>/touch*/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "EndDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}